--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.4",
+    "axios": "^0.26.1",
     "dayjs": "^1.10.7",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
@@ -13,6 +13,7 @@
     "mockman-js": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
