--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "mockman-js": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-range": "^1.8.12",
+    "react-rangeslider": "^2.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
